# deep_learning

./: .gitmodules  README.md
src/deploy/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
src/deploy/.devcontainer/: devcontainer.json
src/deploy/cmake/: find_opencv.cmake  find_rknn.cmake  find_spdlog.cmake  find_yaml-cpp.cmake
src/deploy/configs/: yolov5_seg_fall_detection.yaml
src/deploy/examples/: CMakeLists.txt  yolov5_seg_example.cpp
src/deploy/examples/yolov5_seg_example/: CMakeLists.txt  main.cpp
src/deploy/include/common/: Platform.hpp  Tensor.hpp
src/deploy/include/config/: PerceptionConfig.hpp  Yolov5SegModelConfig.hpp
src/deploy/include/infer_engine/: Device.hpp  Engine.hpp  Factory.hpp  ModelInfo.hpp
src/deploy/include/perception_model/: PerceptionModel.hpp  PerceptionModelFactory.hpp  Yolov5SegModel.hpp  Yolov5SegmentationModel.hpp
src/deploy/include/processing/: Factory.hpp  ImageCvUtils.hpp  ImagePipeline.hpp  Op.hpp  Pipeline.hpp  PostprocessPipeline.hpp  PreprocessPipeline.hpp  Transform.hpp
src/deploy/include/type/: PerceptionData.hpp  Step.hpp  Tensor.hpp
src/deploy/include/utils/: Log.hpp  Logger.hpp
src/deploy/scripts/: README.md  get_third_party_rknn.sh  get_third_party_spdlog.sh
src/deploy/src/: CMakeLists.txt
src/deploy/src/app/: CMakeLists.txt  main.cpp
src/deploy/src/common/: Platform.cpp
src/deploy/src/core/: Device.cpp  ModelInfo.cpp
src/deploy/src/infer_engine/: CMakeLists.txt  Factory.cpp
src/deploy/src/perception_model/: CMakeLists.txt  PerceptionModelFactory.cpp  Yolov5SegModel.cpp  Yolov5SegmentationModel.cpp
src/deploy/src/processing/: CMakeLists.txt  Factory.cpp  ImageCvUtils.cpp  Op.cpp
src/deploy/src/utils/: CMakeLists.txt  Log.cpp
src/deploy/test/: CMakeLists.txt
src/deploy/test/common/: CMakeLists.txt  test_Platform.cpp
src/deploy/test/utils/: CMakeLists.txt
src/deploy/tests/: CMakeLists.txt
src/deploy/tests/common/: CMakeLists.txt  test_Platform.cpp
src/deploy/tests/processing/: CMakeLists.txt  test_processing.cpp  test_resize.cpp
src/deploy/tests/utils/: CMakeLists.txt  test_Log.cpp
src/deploy/tests/utils_lib/: CMakeLists.txt  test_config_gtest.cpp  test_yaml.yaml
src/train/: .gitignore  Dockerfile  README.en.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_4060.txt  requirements_5060Ti.txt  requirements_back.txt  requirements_base_image.txt  test_object_detection.py  train.txt
src/train/.devcontainer/: devcontainer.json
src/train/.devcontainer/convert-ubuntu-npu-allwinner/: devcontainer.json  post-create.sh
src/train/.devcontainer/pytorch-gpu/: Dockerfile  devcontainer.json
src/train/configs/: classify_model.yml  directional_corner_detection.yml
src/train/configs/callbacks/: lightning.yaml
src/train/configs/experiments/: image_classifiter.yaml  image_classifiter_IMAGE_NET.yaml  image_classifiter_IMAGE_NETTE.yaml  image_classifiter_IMAGE_NETTE_backup.yaml  image_classifiter_IMAGE_NETTE_cnn_dropout.yaml  image_classifiter_IMAGE_NETTE_efficientnet_v2_s.yaml  image_classifiter_IMAGE_NETTE_fc_dropout.yaml  image_classifiter_IMAGE_NETTE_maxvit_t.yaml  image_classifiter_IMAGE_NETTE_mobilenet_v3_large.yaml  image_classifiter_IMAGE_NETTE_regnet_y_32gf.yaml  image_classifiter_IMAGE_NETTE_swin_v2_t.yaml  image_classifiter_MNIST.yaml  image_classifiter_copy.yaml  object_detect_COCO.yaml  object_detect_COCO8.yaml  object_detect_COCO8_export.yaml
src/train/configs/models/: demo_two_inputs_one_outputs.yaml  efficientnet_v2_s.yaml  maxvit_t.yaml  mobilenet_v3_large.yaml  regnet_y_32gf.yaml  resnet18.yaml  swin_v2_t.yaml  yolov8_n.yaml
src/train/configs/optim/: torch_lr_scheduler.yaml  torch_optim.yaml
src/train/configs/pruner/: torch_pruning.yaml
src/train/configs/transforms/: torchviosn.yaml
src/train/convert/: README.md
src/train/database_sample/: test.txt
src/train/database_sample/labelme/: 1.json  10.json  5.json  6.json  7.json  8.json  9.json
src/train/database_sample/parking_slot/: test.txt  val.txt
src/train/database_sample/test_labels/: 10.json  2.json  3.json  4.json  7.json  8.json
src/train/datasets/: train.txt  val.txt
src/train/datasets/coco8/: train.csv
src/train/datasets/labelme/: 2.json  3.json  4.json
src/train/datasets/parking_slot/: train.txt
src/train/datasets/test_labels/: 1.json  5.json  6.json  9.json
src/train/notebooks/: Lightning.ipynb  model.yaml  resnet.ipynb  test.ipynb  torchvision_transforms.ipynb  tutorial_lightning_mnist.ipynb  yolov8.py
src/train/scripts/: add_class_id.py  add_column_from_path.py  create_csv_to_save_path.py  create_dataset_table_from_multi_folders_for_train_predict.py  export.py  generate_classification_dataset_table.py  get_dataset_txt_for_train_predict.py  get_evaluate_report_for_dataset.py  get_model_profile_report.py  get_result_of_model_on_images.py  image_npy_speed_test.py  run_batch_train.sh  train.py  train_pruning.py  train_yolov8.py
src/train/src/datasets/: __init__.py  base_dataset.py
src/train/src/losses/: object_detection.py
src/train/src/lovely_deep_learning/: cli.py
src/train/src/lovely_deep_learning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/train/src/metrics/: __init__.py  classify_metrics.py
src/train/src/models/: backbone.py
src/train/src/utils/: file_processor.py  my_labelme.py  my_labelme_processor.py  profiler_pytorch.py
src/train/tests/: __init__.py
src/train/tests/cli/: __init__.py  conftest.py  test_image_net.py  test_image_nette.py  test_object_detect_coco8.py
src/train/tests/data_module/: test_COCO2DataModule.py  test_base.py  test_coco8.py  test_image_classifier.py  test_image_net.py  test_image_nette.py  test_mnist.py  test_object_detect.py
src/train/tests/datamodule/: test_COCO2DataModule.py
src/train/tests/dataset/: test_base.py  test_base_dataset.py  test_image_classifier.py  test_image_nette.py  test_keypoint.py  test_mnist.py  test_object_detect.py  test_object_detection.py  test_predict.py  test_yolo_dataset.py
src/train/tests/datasets/: test_keypoint.py  (+3 more)
tests/processing/ops/: CMakeLists.txt
(+155 files in other folders)
