[project]
name = "lovely-deep-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "黄文华",email = "18675381281@163.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch (==2.8.0)",
    "torchvision (==0.23.0)",
    "torchaudio (==2.8.0)",
    "lightning (==2.5.5)",
    "ultralytics (==8.3.189)",
    "typer (==0.17.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
