[project]
name = "lovely-deep-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "黄文华",email = "18675381281@163.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch (==2.8.0)",
    "torchvision (==0.23.0)",
    "torchaudio (==2.8.0)",
    "lightning (==2.5.5)",
    "ultralytics (==8.3.189)",
    "typer (==0.17.4)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (==2.2.3)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jsonargparse[signatures] (>=4.46.0,<5.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "torchmetrics (>=1.3.0,<2.0.0)",
    "pycocotools (>=2.0.8)",
    "onnx (==1.12.0)",
    "onnxruntime-gpu (==1.13.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "PyYAML (>=6.0,<7.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "download: tests that download datasets",
    "cli: tests that run cli commands",
]